# BOLT-time-tracker

./: .gitignore  AI.md  CLAUDE.md  README.md  projectDescription  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
src/: CLAUDE.md
src/ai/: CLAUDE.md  describer.py
src/cli/: CLAUDE.md  main.py
src/storage/: CLAUDE.md  csv_writer.py
src/tracker/: CLAUDE.md  classifier.py  models.py  monitor.py  session.py
tests/: CLAUDE.md  conftest.py  test_classifier.py  test_cli.py  test_csv_writer.py  test_describer.py  test_models.py  test_session.py
